<resources>
    <string name="app_name">DssDemo</string>
    <string name="common_request_loading">Requsting...</string>
    <string name="login_param_null">Param can not been null</string>
    <string name="login_failed">Login failed</string>
    <string name="main_exit_tips">Click back again to exit</string>
    <string name="play_capture_success">Capture success, path:</string>
    <string name="play_capture_failed">Capture failed</string>
    <string name="play_back_record_not_create">Record is not created</string>
    <string name="play_back_pause">Pause</string>
    <string name="play_back_resume">Resume</string>
    <string name="play_back_recording">Now is recording</string>
    <string name="play_talk_close">Talk close</string>
    <string name="play_talk_start">Talk start</string>
    <string name="play_talk_failed">Talk failed</string>
    <string name="play_record_start">Start record</string>
    <string name="play_record_stop">Stop record, path:</string>
    <string name="play_record_stop_tips">Stop record</string>
    <string name="play_play">Play</string>
    <string name="play_stop">Stop</string>
    <string name="play_net_error">Net error</string>
    <string name="play_talk_no_permission">Talk no permission</string>
    <string name="device_channel_null">Channel is null</string>
    <string name="device_get_failed">Get failed or list is null</string>
    <string name="device_all_device">All device</string>
    <string name="device_root">Root</string>
    <string name="device_group_is_null">Group is null</string>
    <string name="login_server_ip">Ip</string>
    <string name="login_server_port">Port</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="play_back_title">Playback</string>
    <string name="play_back_pre_month">Pre</string>
    <string name="play_back_next_month">Next</string>
    <string name="play_item_capture">Capture</string>
    <string name="play_item_record">Record</string>
    <string name="play_back_item_pause">Pause</string>
    <string name="play_item_audio">Audio</string>
    <string name="play_item_play">Play</string>
    <string name="play_back_item_speed_add">Speed+</string>
    <string name="play_back_item_speed_decrease">Speed-</string>
    <string name="play_back_item_server_record">ServerRecord</string>
    <string name="play_back_item_device_record">DeviceRecord</string>
    <string name="common_item_refresh">Refresh</string>
    <string name="device_item_play_back">Playback</string>
    <string name="play_online_title">Playonline</string>
    <string name="play_online_talk">Talk</string>
    <string name="play_online_cloud">Cloud</string>
    <string name="play_online_hd">HD</string>
    <string name="play_online_sd">SD</string>
    <string name="play_online_fl">FL</string>
    <string name="play_online_remove">Remove</string>
    <string name="play_online_full">Full</string>
</resources>
