<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/play_back_title"
            android:textSize="20sp"/>
    </RelativeLayout>
    <com.mm.uc.PlayWindow
        android:id="@+id/play_window"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        Focus_SurfaceBG="#AA414D5B"
        Normal_SurfaceBG="#414D5B"
        Focus_ToolbarBG="#829EBF"
        Normal_ToolbarBG="#A6ADB6"
        PlayWinBG="#000000"
        Open_Image="@mipmap/play_online_video_bg"
        Reflash_Image="@mipmap/play_module_refresh" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:padding="5dp">
        <TextView
            android:id="@+id/dataTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/preMonth"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/dataTime"
            android:gravity="center"
            android:background="@android:color/darker_gray"
            android:padding="5dp"
            android:text="@string/play_back_pre_month"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/nextMonth"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_below="@id/dataTime"
            android:gravity="center"
            android:background="@android:color/darker_gray"
            android:padding="5dp"
            android:text="@string/play_back_next_month"
            android:textSize="15sp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/data_list"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/dataTime"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/white"
            android:layout_toLeftOf="@id/nextMonth"
            android:layout_toRightOf="@id/preMonth"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/capture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/play_btn_selector"
                android:text="@string/play_item_capture"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/play_btn_selector"
                android:text="@string/play_item_record"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/pause"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/play_btn_selector"
                android:text="@string/play_back_item_pause"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/sound"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/play_btn_selector"
                android:text="@string/play_item_audio"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/play"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/play_btn_selector"
                android:text="@string/play_item_play"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/speedAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/play_btn_selector"
                android:text="@string/play_back_item_speed_add"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/speedReduce"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/play_btn_selector"
                android:text="@string/play_back_item_speed_decrease"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/play_btn_selector"
                android:text="@string/play_back_item_server_record"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/device"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/play_btn_selector"
                android:text="@string/play_back_item_device_record"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
